# FastApi-JunToSin-API

./: .dockerignore  .env.docker.template  .env.template  .gitignore  Dockerfile  Makefile  README.md  SConstruct  alembic.ini  entrypoint.sh  pyproject.toml
app/: main.py
app/api/: responses.py  routers.py
app/api/v1/: auth.py  dependencies.py  routers.py  tasks.py  users.py
app/auth/: router.py  transport.py  user_manager.py
app/auth/dependencies/: access_tokens.py  backend.py  fastapi_users_routers.py  strategy.py  user_manager.py  users.py
app/core/: containers.py  settings.py
app/core/exceptions/: base.py
app/db/: db.py  redis.py
app/migrations/: env.py
app/migrations/versions/: 2024_09_14_0054-7ec905884c26_task_model_creation.py  2024_09_17_0050-f42df3708325_task_model_creation.py  2024_09_17_2259-3d37568bbedf_task_user_models_creation.py  2024_09_26_2240-92bae8083781_default.py  2024_10_04_1635-da0642a9f214_default.py
app/models/: __init__.py  auth_users.py  base.py  mixins.py  roled_users.py  tasks.py  tokens.py  users.py
app/repositories/: auth_user.py  exceptions.py  roled_users.py  tasks.py  users.py
app/schemas/: api_response.py  auth_users.py  profiles.py  roled_users.py  tasks.py  users.py
app/services/: auth.py  auth_users.py  code_senders.py  codes.py  roled_users.py  tasks.py  tokens.py  users.py
app/services/exceptions/: tokens.py
app/settings/: containers.py  settings.py
app/use_cases/: exceptions.py  login.py  registration.py  send_varification_code.py  user_profile.py  verify.py
app/use_cases/auth/: login.py  registration.py  send_varification_code.py  verify.py
app/use_cases/users/: user_profile.py
app/utils/: enums.py  redis_repository.py  repositories.py  sql_repository.py  unitofwork.py
docker_compose/: app.yaml  storages.yaml  test_storages.yaml
tests/: conftest.py
tests/api/: common.py  test_ping.py
tests/api/_auth/: test_login.py  test_register.py  test_send_verification_code.py
tests/api/_tasks/: test_get_tasks.py
tests/api/_users/: test_get_authenticated_user_profile.py
tests/api/auth_users/: test_get_authenticated_user_profile.py  test_register.py
tests/api/tasks/: test_tasks.py
tests/api/tasks/api/users/: conftest.py  test_send_verification_code.py
tests/api/users/: test_get.py  test_post.py
tests/factories/: users.py
tests/factories/users/: employed_users.py
